--- a/Vim.wiki
+++ b/Vim.wiki
@@ -15,6 +15,9 @@
 * supprimer le message d'accueil `set shortmess=+I`
 * `<C-r>=` expression register
 * Voir par qui a été setter une variable :verbose set cpoptions?
+* `z=` pour avoir la liste des corrections et `1z=` pour corriger avec la premère occurence de la liste
+* voir http://blog.fedora-fr.org/metal3d/post/Correction-orthographique-et-grammaticale-avec-Vim pour plud d'info sur l'autocorrection
+* plugin [[https://github.com/osyo-manga/vim-over|vim-over]] `:OverCommandLine`
 
 == Mode vim ==
 
