--- a/Mutt.wiki
+++ b/Mutt.wiki
@@ -43,6 +43,11 @@ just press `;t` (apply tag on all tagged mail => untagged)
 
 _Open a link_ `<C-b>`
 
+_Attach files_ 
+press "a" and for multiple file at once use "t" to tag the files you want 
+pree "enter" to add files
+
+
 == TODO ==
 
 # *Password protection*
