--- a/TO test.wiki
+++ b/TO test.wiki
@@ -14,6 +14,7 @@
 
 = TO DO =
  * [ ] thunderbolt en connexion a chaud (udevadm monitor) https://bbs.archlinux.org/viewtopic.php?id=170294
+ * [ ] ameliorer la detection des ecrans http://superuser.com/questions/970024/system-doesnt-detect-hot-plugged-display-portthrough-thunderbolt-connector
  * [ ] improve vimrc see https://github.com/pixelastic/oroshi/blob/master/config/vim/vimrc
  * [ ] improve delete on gmail account (TODO : mark message as d and $ to really delete -> mv to trash box)
  * [ ] faire un raccourci dans mutt pour avoir accès directemnt au mail envoyé
@@ -25,4 +26,5 @@
  * [ ] vimwiki : faire que la touche tab propose l'auto-complétion des mots, les flèches droite-gauche permenettent de naviguer entre les fautes et qu'on soit automatiquement en mode correction
  * [ ] vim : trouver une solution pour désactiver le XON/XOFF (ctl-q/ctl-s)
  * [ ] mutt : améliorer la configuration voir http://www.titus-stahl.de/blog/2015/08/26/my-mutt-configuration/ et http://stevelosh.com/blog/2012/10/the-homely-mutt/#searching-email
- * [ ] vimb : ouvrir les pdf (ne plus les télécharger)
+ * [ ] vimb : ouvrir les pdf (ne plus les télécharger) -> tentavie avec `/usr/bin/inotifywait -m -q -e create --format %f . | xargs llpp` mais marche pas !!!
+ * [ ] mutt : voir http://wcm1.web.rice.edu/mutt-tips.html pour le Format-flower
