--- a/diary/diary.wiki
+++ b/diary/diary.wiki
@@ -2,7 +2,15 @@
 
 == 2015 ==
 
+=== May ===
+    * [[2015-05-31|Recette gratin pâte rapide]]
+
+=== April ===
+    * [[2015-04-21|Vim meetup 150421]]
+    * [[2015-04-06]]
+
 === March ===
+    * [[2015-03-21|Revenu contributif]]
     * [[2015-03-12|MOOC]]
     * [[2015-03-09|xmodmap]]
     * [[2015-03-04|Vimb configuration]]
