--- a/Tmux.wiki
+++ b/Tmux.wiki
@@ -5,3 +5,5 @@
 # pour attacher un session distante `ssh -t [HOTE] tmux a -t [SESSION_NAME]
 # configuration voir http://blog.yesmeck.com/tmuxrc/ et https://github.com/tyjak/tmuxrc
 # pour ne pas freezer le terminal avec <c-s> (utiliser <c-q> pour défreezer), ajouter `stty -ixon` dans bashrc pour ne plus avoir cet effet de bord. Voit ce [[http://unix.stackexchange.com/questions/72086/ctrl-s-hang-terminal-emulator|stackexchange]] pour plus d'info.
+# pour s'attacher à une session dékà attachée `tmux attach -d`
+# tmux useful commands http://www.dayid.org/os/notes/tm.html
