--- a/TO test.wiki
+++ b/TO test.wiki
@@ -32,3 +32,5 @@
  * [ ] vifm : faire un mode preview pour que les fichiers s'ouvrent dans un scratchpad
  * [ ] Faire le montage du dossier de musique sur creamy
  * [X] i3 et dmenu : pourvoir lancer une application personnelle et faire que le nom s'affiche comme ceux prédéfinies (console-web-etc...)
+ * [ ] i3 : faire que les layouts restent persistant entre chaque changement d'écran (peut-être via un backup auto du layouts rattachés à la fenêtre au moment de son changement
+ * [ ] i3 : dernier écran -> aller à l'écran précédant
