--- a/git && github.wiki
+++ b/git && github.wiki
@@ -20,3 +20,10 @@
 
 == Git pour le déploiement ==
 	https://www.digitalocean.com/community/tutorials/how-to-set-up-automatic-deployment-with-git-with-a-vps
+	
+== Faire un merge ==
+
+    * Voir http://www.rosipov.com/blog/use-vimdiff-as-git-mergetool/
+
+== TODO ==
+    [ ] Maitriser les merges et les synchros
