--- a/Synology.wiki
+++ b/Synology.wiki
@@ -4,6 +4,7 @@
 
 * Pour la configuration voir http://pellelatarte.fr/2011/03/le-ssh-pour-tous-les-utilisateurs-sur-les-nas-synology/
 * Ne pas oublier de rendre possible la commande `su -` en faisant `chmod u+s /bin/busybox`
+* Si besoin de ractiver le root -> passer par telnet, le mt de passe root est le même que pour admin et ensuite éditer le fichier sshd_config pour reactiver root
 
 == Syncthing ==
 
