--- a/TO test.wiki
+++ b/TO test.wiki
@@ -1,5 +1,6 @@
 = TO test =
 
+ * [ ] Offline imap mail see http://blog.tshirtman.fr/2013/3/17/mutt-offlineimap-notmuch-nottoomuch
  * [X] http://ohmyz.sh
  * [ ] http://www.drumminhands.com/2014/06/15/raspberry-pi-photo-booth/
  * [ ] pandoc pour faire les conversions de différents markup
@@ -30,7 +31,7 @@
  * [ ] mutt : voir http://wcm1.web.rice.edu/mutt-tips.html pour le Format-flower
  * [ ] vifm : fair un plugin pour gérer git
  * [ ] vifm : faire un mode preview pour que les fichiers s'ouvrent dans un scratchpad
- * [ ] Faire le montage du dossier de musique sur creamy
+ * [X] Faire le montage du dossier de musique sur creamy (fait avec syncthing)
  * [X] i3 et dmenu : pourvoir lancer une application personnelle et faire que le nom s'affiche comme ceux prédéfinies (console-web-etc...)
  * [ ] i3 : faire que les layouts restent persistant entre chaque changement d'écran (peut-être via un backup auto du layouts rattachés à la fenêtre au moment de son changement
  * [ ] i3 : dernier écran -> aller à l'écran précédant
